Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/wildcards/6437894/T6437894.out
T6437894.java:15:12: compiler.err.doesnt.exist: a.A
1 error
